# 06-diff_icescreen_versions

./: .gitignore  README.md  environment.yml  pyproject.toml
data/: 7-complete_datasetref_curated.tsv  output_diff_v0_v1.txt  phylum_mapping.csv
data/ICEscreen_raw_output_v0/CP002447/ICEscreen_results/results/CP002447.1/icescreen_detection_ME/: CP002447.1_detected_ME.summary  CP002447.1_detected_ME.tsv  CP002447.1_detected_SP_withMEIds.tsv
data/ICEscreen_raw_output_v0/CP002802/ICEscreen_results/results/CP002802.1/icescreen_detection_ME/: CP002802.1_detected_SP_withMEIds.tsv
data/ICEscreen_raw_output_v0/NC_004368/ICEscreen_results/results/NC_004368.1/icescreen_detection_ME/: NC_004368.1_detected_ME.tsv  NC_004368.1_detected_SP_withMEIds.tsv
data/ICEscreen_raw_output_v0/NC_013316/ICEscreen_results/results/NC_013316.1/icescreen_detection_ME/: NC_013316.1_detected_ME.summary  NC_013316.1_detected_SP_withMEIds.tsv
data/ICEscreen_raw_output_v0/NZ_LR793256/ICEscreen_results/results/NZ_LR793256.1/icescreen_detection_ME/: NZ_LR793256.1_detected_ME.summary
data/ICEscreen_raw_output_v1/CP002447/ICEscreen_results/results/CP002447.1/icescreen_detection_ME/: CP002447.1_detected_SP_withMEIds.tsv
data/ICEscreen_raw_output_v1/CP002802/ICEscreen_results/results/CP002802.1/icescreen_detection_ME/: CP002802.1_detected_ME.summary  CP002802.1_detected_ME.tsv  CP002802.1_detected_SP_withMEIds.tsv
data/ICEscreen_raw_output_v1/NC_004368/ICEscreen_results/results/NC_004368.1/icescreen_detection_ME/: NC_004368.1_detected_ME.summary  (+1 more)
diff_icescreen/: cli.py  core.py
(+3 files in other folders)
